# daily-drop

./: .env.example  .gitignore  README.md  pyproject.toml  sources.example.yaml
.github/workflows/: daily_drop.yml  daily_ingest.yml
config/: interests.txt  sources.yaml
dailydrop/: archive.py  config.py  dedup.py  fetch.py  llm.py  models.py  normalize.py  notify.py  pipeline.py  rank.py
dailydrop/templates/: archive.html.jinja2  digest.html.jinja2  digest.txt.jinja2  drop.html.jinja2  drop.subject.jinja2  drop.txt.jinja2
docs/: architecture.md  index.html
feedcurator/: archive.py  config.py  dedup.py  fetch.py  llm.py  models.py  notify.py  pipeline.py  rank.py
feedcurator/templates/: archive.html.jinja2  digest.html.jinja2  digest.txt.jinja2
scripts/: sync_secrets.sh
tests/: conftest.py  test_archive.py  test_config.py  test_dedup.py  test_fetch.py  test_llm.py  test_models.py  test_normalize.py  test_notify.py  test_pipeline.py  test_rank.py
