[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dailydrop"
version = "0.1.0"
description = "Daily content curation pipeline: RSS feeds → email digest"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "dfangafk" },
]
requires-python = ">=3.12"
keywords = ["rss", "curation", "pipeline", "newsletter"]

dependencies = [
    "feedparser>=6.0",
    "jinja2>=3.0",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "requests>=2.32.5",
]

[project.scripts]
dailydrop = "dailydrop.pipeline:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["dailydrop"]

[tool.uv]
package = true

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP"]
